--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "automation"
   ],
   "author": "Joahua Azemoh",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-sass": "^2.3.1"
+  }
 }
