--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Joahua Azemoh",
   "license": "MIT",
   "devDependencies": {
+    "browser-sync": "^2.12.5",
     "gulp": "^3.9.1",
     "gulp-sass": "^2.3.1"
   }
